--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
-fastapi
-uvicorn
-python-multipart
-PyMuPDF
-python-docx
-spacy
-nltk
-scikit-learn
-google-generativeai
-reportlab
-python-dotenv
-pydantic
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+PyMuPDF==1.23.8
+python-docx==1.1.0
+spacy==3.7.2
+scikit-learn==1.3.2
+google-generativeai==0.3.2
+reportlab==4.0.7
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.1.2
